# edsac-emulator

./: .gitignore  CMakeLists.txt  README.md  cpu.c  cpu.h  fileutils.h  main.c  main.h  makefile  makefile.windows
src/main/: alu.h  cpu.c  cpu.h  disassemble.h  engine.c  engine.h  fileutils.c  main.c  main.h
src/test/: mainTest.c
